# DecIRC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: DecIrc.icns
macos_app/: Info.plist
macos_app/Dec.app/Contents/: Info.plist
scripts/: build.sh  debug.sh  generate_macosapp.sh  run.sh
src/: AppState.cc  AppState.h  event_receiver.h  gui_components.cc  gui_components.h  main.cc
src/audio/opus/: opus_wrapper.cc  opus_wrapper.h
src/components/: channel_list.cc  channel_list.h  chat_input.h  component.h  image_overlay.cc  image_overlay.h  message_list.cc  message_list.h  mouse_receiver.h  popover.h  search.h  search_list.cc  search_list.h  text_field.cc  text_field.h  text_receiver.h  user_info.cc  user_info.h  user_list.cc  user_list.h
src/discord/: discord_client.cc  discord_client.h  image_cache.cc  image_cache.h  message_state.cc  message_state.h  structs.h  voice_client.cc  voice_client.h
src/irc/: IncomingMessage.h  image_cache.cc  image_cache.h  irc_client.cc  irc_client.h  irc_event_handler.cc  irc_event_handler.h  irc_messages.hpp  irc_pool.cc  irc_pool.h  irc_socket.cc  irc_socket.h  message_state.cc  message_state.h  message_util.cc  message_util.h  preclude.h  stream_reader.h
src/rendering/: box.h  font_atlas.cc  font_atlas.h  image.h  irc_colors.h  la.cc  la.h  opengl_state.cc  opengl_state.h  text.cc  text.h  text_box.cc  text_box.h
src/utils/: base64.h  base64.hpp  config.cc  config.h  crypto.cc  crypto.h  file_util.h  global-protocol-handler.h  http_util.h  notifications.cc  notifications.h  unicode_utils.h  url_handler.cc  url_handler.h  url_parser.cc  url_parser.h  web_util.cc  web_util.h
src/utils/notifications_macos/: MacNotifications.mm  Notifications-C-Interface.h  Notifications.h  ProtocolHandler.h  ProtocolHandler.mm
