cmake_minimum_required(VERSION 3.16)
project("dec")
set(CMAKE_CXX_STANDARD 17)
set(WEBP_BUILD_ANIM_UTILS "Build animation utilities." OFF)
set(WEBP_BUILD_CWEBP "Build the cwebp command line tool." OFF)
set(WEBP_BUILD_DWEBP "Build the dwebp command line tool." OFF)
set(WEBP_BUILD_GIF2WEBP "Build the gif2webp conversion tool." OFF)
set(WEBP_BUILD_IMG2WEBP "Build the img2webp animation tool." OFF)
set(WEBP_BUILD_VWEBP "Build the vwebp viewer tool." OFF)
set(WEBP_BUILD_WEBPINFO "Build the webpinfo command line tool." OFF)
set(WEBP_BUILD_LIBWEBPMUX "Build the libwebpmux library." OFF)
set(WEBP_BUILD_WEBPMUX "Build the webpmux command line tool." OFF)
set(WEBP_BUILD_EXTRAS "Build extras." OFF)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(RTAUDIO_BUILD_TESTING OFF)
set(USE_TLS ON)
add_executable(dec src/audio/opus/opus_wrapper.cc src/rendering/opengl_state.cc src/rendering/glad.c src/rendering/font_atlas.cc src/gui_components.cc src/AppState.cc src/rendering/text_box.cc src/rendering/la.cc src/rendering/text.cc src/rendering/shader.cc src/components/search_list.cc src/main.cc src/components/user_info.cc src/components/text_field.cc src/components/message_list.cc src/discord/discord_client.cc src/discord/image_cache.cc src/discord/message_state.cc src/discord/voice_client.cc third-party/png/lodepng.cpp)
target_include_directories(dec PRIVATE third-party/IXWebSocket/ixwebsocket)
target_include_directories(dec PRIVATE third-party/json)


add_subdirectory(third-party/opus)
add_subdirectory(third-party/libjpeg)
add_subdirectory(third-party/libwebp)
add_subdirectory(third-party/glfw)
add_subdirectory(third-party/rtaudio)
add_subdirectory(third-party/freetype2)
add_subdirectory(third-party/IXWebSocket)
add_subdirectory(third-party/libsodium)
target_link_libraries(dec PUBLIC glfw freetype ixwebsocket z opus sodium rtaudio webp libjpeg)
file(COPY assets DESTINATION .)
#set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
#set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")